--- a/src/pages/addJob/AddJobPage.module.css
+++ b/src/pages/addJob/AddJobPage.module.css
@@ -1,6 +1,7 @@
 .Container {
-    display: flex;
     width: 100%;
+    height: auto;
+    display: flex;
 }
 
 /* left side */
@@ -14,5 +15,5 @@
 /* right side */
 .rightSide {
     width: 40%;
-    height: 100%;
+    /* height: 100%; */
 }
