--- a/src/pages/viewDetails/ViewDetailsPage.module.css
+++ b/src/pages/viewDetails/ViewDetailsPage.module.css
@@ -7,7 +7,7 @@
 .Container2{
     width: 75%;
     margin: auto;
-    padding-top: 80px;
+    margin-top: -20px;
     padding-bottom: 30px;
     display: flex;
     flex-direction: column;
