--- a/src/components/jobDetails/JobDetails.module.css
+++ b/src/components/jobDetails/JobDetails.module.css
@@ -94,6 +94,8 @@
     font-weight: 400;
     color: #595959;
     line-height: 150%;
+    white-space: pre;
+    text-wrap: wrap;
 }
 
 .skillsContainer{
