--- a/src/components/jobDetails/JobDetails.module.css
+++ b/src/components/jobDetails/JobDetails.module.css
@@ -95,7 +95,7 @@
     color: #595959;
     line-height: 150%;
     white-space: pre;
-    text-wrap: wrap;
+    text-wrap: pretty;
 }
 
 .skillsContainer{
